# llm-agent-tools

./: .gitignore  .llm-tools.conf.example  AGENTS.md  CLAUDE.md  README.md  claude-rag-lite.sh  install.sh  journal.md  prd.md  prompt.md  pyproject.toml  scratchpad.sh  uninstall.sh
.claude/: README.md  anchors.json  implement_timestamp_test.md  scratchpad_log.txt
.claude/.rag/: claude_knowledge.db
.claude/cheatsheets/: git_commands.md
.claude/delta/: 2025-09-02-baseline.yml  Timestamp_Backfill_2025-09-01_22-25-02.md  rag_db_rebuild_2025-09-01_22-19-58.md  rag_system_implementation.md
.claude/metadata/: components.yml  hotspots.txt  prd.md  research_demo_task.md
.claude/patterns/: error_handling_pattern.md  implement_demo_task.md
.claude/qa/: async_python_basics.md  plan_demo_task.md  template-usage.yml
.claude/scratchpad/active/: implement_delta_date_fix.md  plan_README_organization_2025-09-01_20-12-35.md  plan_delta_date_fix.md  plan_timestamp_test.md  (+3 more)
bash-tools/: .deadcode.yml  .deadcodeignore  PRD.md  README.md  deadcode.rules.py.yml  deadcode.rules.ts.yml  deadcode.sh  scratchpad.sh
deadcode/: knip-dead-code.sh
documentation/: architecture.md  creating-tools.md  exa-search.md  list-tools.md  memory-journal.md  scratchpad.md  tool-pattern.md  verify-tools.md
knowledge_base/: README.md
memory-bank/shared/: knowledge_base.json
rag_modules/: indexer.py  search.py  stats.py
rust-rag/: .gitignore  Cargo.toml  README.md
rust-rag/src/: main.rs
tools/: exa-search.sh  list-tools.sh  memory-journal.sh  scratchpad.sh  verify-tools.sh
(+7 files in other folders)
